	'common/adv_reader.h'.
2014-07-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Split the 'int sock' argument in the RTP callback into
	'int read_sock,int write_sock' in 'common/rtp.cpp' and
	'common/rtp.h'.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Got building working under OS X 13.2.0.
2014-07-07 Fred Gleason <fredg@paravelsystems.com>
	* Optimized 'Routing::LoadInterfaces()' to select 'en0' as the
	default interface under OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Refactored socket code in 'common/routing.cpp',
	'common/routing.h' and 'common/rtp.cpp' so as to handle
	subscriptions properly under OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'configure.ac' that failed to detect certain
	versions of OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'get_distro.sh' that failed to detect OS X
	correctly.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Added code to create the cache directory automatically.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Commented out debug code in 'routing.cpp'.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2014-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'GpioServer' class in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
	* Added code in 'syd/syd.cpp' and 'syd/syd.h' to forward GPI
	events along with RTP audio.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Ringbuffer' class in 'common/ringbuffer.cpp' and
	'common/ringbuffer.h'.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.